--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<img src="http://placekitten.com/300/300" alt="Kočka">
-<h1>Ahoj</h1>
+<img src="http://placekitten.com/300/300" alt="Kočka" />
+<h1>Filip</h1>
